Added Session::load and Session#save to accomplish persistence
* Sessions are persistent, that means each time you start the app at "/"
  you enter a new session.
* Persistent sessions can be resumed
* Added more tests, also some integration tests

--- a/views/session.erb
+++ b/views/session.erb
@@ -16,11 +16,11 @@
   <div class="controls">
     <button id="show">reveal</button>
 
-    <form id="got-it" action="/session/cards/<%= @card.id %>" method="POST">
+    <form id="got-it" action="/sessions/<%= @session.id %>/cards/<%= @card.id %>" method="POST">
       <button>remembered</button>
     </form>
 
-    <form action="/" method="GET">
+    <form action="/sessions/<%= @session.id %>" method="GET">
       <button>next</button>
     </form>
   </div>
